tests/cases/variables/errors/variables-struct-pattern-field.ari
struct Point {
  x: i64,
}

fn main() -> i64 {
  let Point { y } = Point { x: 1 };
  return y;
}
